added section for bio, work and contact

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Lillie Jirapattanalak</h1>
         <img src="./assets/Liilie header.jpg" width="460" height="345" alt="lillie" class="lillie">
         <nav>
-            <a href="#aboutme">Home</a> 
+            <a href="#">Home</a> 
             <a href="#">About</a>
             <a href="#">Work</a>
             <a href="#">Contact</a>
