update header and main and put style

--- a/index.html
+++ b/index.html
@@ -5,17 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Lillie Jirapattanalak</h1>
-        <img src="./assets/Liilie header.jpg" width="460" height="345" alt="lillie" class="lillie">
+        <!-- <img src="./assets/Liilie header.jpg" width="460" height="345" alt="lillie" class="lillie"> -->
         <nav>
             <a href="#">Home</a> 
-            <a href="#">About</a>
+            <a href="#aboutme">About</a>
             <a href="#">Work</a>
             <a href="#">Contact</a>
         </nav>
     </header>
+
+    <main>
+        
+        <section class="hero"></section>
+        <section id="aboutme" class="aboutme">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor sit amet, delenit reprehendunt quo no, ad cum tamquam bonorum gloriatur, 
+            omnes partiendo vis te. Viderer persecuti at vel, duis periculis cu est, sea errem nullam no. 
+            Sed te copiosae detraxit delicatissimi. At sanctus nostrum insolens per, libris option vivendo 
+            at pri. Eam abhorreant adversarium ei.
+            </p>
+       </section>
+
+       <section>
+           <h2>Work</h2>
+           <ul>
+                <li><img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="work1"></li>
+                <li><img src="./assets/illustration-travel-ribbon-banner_53876-18319.jpeg" alt="work2"></li>
+                <li><img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="work3"></li>
+                <li><img src="./assets/save-date-wedding-invitation-card-mockup_53876-76433.jpeg" alt="work4"></li>
+                <li><img src="./assets/web-design-concept-with-drawings_1134-77.jpeg" alt="work5"></li>
+           </ul>
+       </section>
+
+       <section>
+           <h2>Contact</h2>
+           <ul>
+            <li class="nobullet"><a href="mailto:lilliejira@gmail.com">lilliejira@gmail.com</a></li>
+            <li class="nobullet"><a href="tel:424.421.9924">424.421.9924</a></li>
+           </ul>  
+       </section>
+
+    </main>
+
+
+
 </body>
 </html>
