updated content and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lillie | Web Developer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -13,18 +13,17 @@
         <h1>Lillie Jirapattanalak</h1>
         <!-- <img src="./assets/Liilie header.jpg" width="460" height="345" alt="lillie" class="lillie"> -->
         <nav>
-            <a href="#">Home</a> 
-            <a href="#aboutme">About</a>
-            <a href="#">Work</a>
-            <a href="#">Contact</a>
+            <a href="#aboutme">about me</a>
+            <a href="#work">work</a>
+            <a href="#contact">contact</a>
         </nav>
     </header>
 
     <main>
-        
         <section class="hero"></section>
+
         <section id="aboutme" class="aboutme">
-            <h2>About me</h2>
+            <h2 id="me">About me</h2>
             <p>Lorem ipsum dolor sit amet, delenit reprehendunt quo no, ad cum tamquam bonorum gloriatur, 
             omnes partiendo vis te. Viderer persecuti at vel, duis periculis cu est, sea errem nullam no. 
             Sed te copiosae detraxit delicatissimi. At sanctus nostrum insolens per, libris option vivendo 
@@ -32,27 +31,37 @@
             </p>
        </section>
 
-       <section>
-           <h2>Work</h2>
-           <ul>
-                <li><img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="work1"></li>
-                <li><img src="./assets/illustration-travel-ribbon-banner_53876-18319.jpeg" alt="work2"></li>
-                <li><img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="work3"></li>
-                <li><img src="./assets/save-date-wedding-invitation-card-mockup_53876-76433.jpeg" alt="work4"></li>
-                <li><img src="./assets/web-design-concept-with-drawings_1134-77.jpeg" alt="work5"></li>
-           </ul>
+       <section id="work">
+            <h2>Work</h2>
+            <p class="qword">
+                "You can do anything you set your mind to."
+                <br>
+                - Benjamin Frankin
+            </p>
+            <a href="https://lilliemefie.github.io/miniproject1/">
+            <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="work1" class="work"></a>
+            
+            <a href="#">
+            <img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="work3" class="work"></a>
+
+            <a href="#">
+            <img src="./assets/save-date-wedding-invitation-card-mockup_53876-76433.jpeg" alt="work4" class="work"></a>
+
+            <a href="#">
+            <img src="./assets/web-design-concept-with-drawings_1134-77.jpeg" alt="work5" class="work"></a>
        </section>
 
-       <section>
+       <section id="contact">
            <h2>Contact</h2>
-           <ul>
-            <li class="nobullet"><a href="mailto:lilliejira@gmail.com">lilliejira@gmail.com</a></li>
-            <li class="nobullet"><a href="tel:424.421.9924">424.421.9924</a></li>
+           <a href="mailto:lilliejira@gmail.com" class="contact">lilliejira@gmail.com</a>
+           <a href="tel:424.421.9924" class="contact">424.421.9924</a>
            </ul>  
        </section>
 
     </main>
 
+    <footer>
+        <h4>Made with ❤️️ by Lillie Jirapattanalak</h4></footer>
 
 
 </body>
