--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
 
     <main>
         <section class="hero"></section>
-
         <section id="aboutme" class="aboutme">
             <h2 id="me">About me</h2>
-            <p>Lorem ipsum dolor sit amet, delenit reprehendunt quo no, ad cum tamquam bonorum gloriatur, 
-            omnes partiendo vis te. Viderer persecuti at vel, duis periculis cu est, sea errem nullam no. 
-            Sed te copiosae detraxit delicatissimi. At sanctus nostrum insolens per, libris option vivendo 
-            at pri. Eam abhorreant adversarium ei.
-            </p>
+            <h2 class="hh">{ Welcome, I am happy that you are here! }</h2>
+            <p class="pp">  My name is Lillie and I am a student at UCLA Extension’s Full Stack Development Program – 3 months full-time
+                 immersive program bootcamp which expect to graduate in July 2021. I am looking for new opportunities to practice 
+                 and develop my skills.</p>
+            <p class="pp">  I have had a passion in web design since I was young, I wrote the online diary and felt like the page’s look was so 
+                 boring, so I tried to find the way how to make its nicer. Therefore, I had a chance to adjust the code on the template. 
+                 At that time, I did not know much about HTML, CSS, etc. But I knew that I was enjoys doing it. Now I am learning and 
+                 eager to learn more.</p>
+            <p class="pp">When I am not studying or working, you can find me at the beach or, at the mountain, or in the kitchen trying out new cooking recipes. </p>
+            
        </section>
 
        <section id="work">
@@ -54,8 +58,7 @@
        <section id="contact">
            <h2>Contact</h2>
            <a href="mailto:lilliejira@gmail.com" class="contact">lilliejira@gmail.com</a>
-           <a href="tel:424.421.9924" class="contact">424.421.9924</a>
-           </ul>  
+           <a href="tel:424.421.9924" class="contact">424.421.9924</a> 
        </section>
 
     </main>
