updated work section & css

--- a/index.html
+++ b/index.html
@@ -35,25 +35,38 @@
             
        </section>
 
-       <section id="work">
+       <section>
+        <div id="work">
             <h2>Work</h2>
             <p class="qword">
                 "You can do anything you set your mind to."
                 <br>
                 - Benjamin Frankin
             </p>
+        </div>
+        <div class="column justify-center">
+            <div class="container">
+            <h3>Mini Project</h3>
             <a href="https://lilliemefie.github.io/miniproject1/">
             <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="work1" class="work"></a>
-            
+            </div>
+            <div class="container">
+            <h3>Coming Soon...</h3>
             <a href="#">
             <img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="work3" class="work"></a>
-
+            </div>
+            <div class="container">
+            <h3>Coming Soon...</h3>
             <a href="#">
             <img src="./assets/save-date-wedding-invitation-card-mockup_53876-76433.jpeg" alt="work4" class="work"></a>
-
+            </div>
+            <div class="container">
+            <h3>Coming Soon...</h3>
             <a href="#">
             <img src="./assets/web-design-concept-with-drawings_1134-77.jpeg" alt="work5" class="work"></a>
-       </section>
+            </div>
+        </div>
+        </section>
 
        <section id="contact">
            <h2>Contact</h2>
