updated work,contact, add my photo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main>
         <section class="hero"></section>
         <section id="aboutme" class="aboutme">
+            <img src="./assets/lilllie-webdeveloper.JPG" alt="lillie" class="lillie">
             <h2 id="me">About me</h2>
             <h2 class="hh">{ Welcome, I am happy that you are here! }</h2>
             <p class="pp">  My name is Lillie and I am a student at UCLA Extension’s Full Stack Development Program – 3 months full-time
@@ -32,7 +33,6 @@
                  At that time, I did not know much about HTML, CSS, etc. But I knew that I was enjoys doing it. Now I am learning and 
                  eager to learn more.</p>
             <p class="pp">When I am not studying or working, you can find me at the beach or, at the mountain, or in the kitchen trying out new cooking recipes. </p>
-            
        </section>
 
        <section>
@@ -44,7 +44,7 @@
                 - Benjamin Frankin
             </p>
         </div>
-        <div class="column justify-center">
+        <div class="column">
             <div class="container">
             <h3>Mini Project</h3>
             <a href="https://lilliemefie.github.io/miniproject1/">
@@ -72,12 +72,14 @@
            <h2>Contact</h2>
            <a href="mailto:lilliejira@gmail.com" class="contact">lilliejira@gmail.com</a>
            <a href="tel:424.421.9924" class="contact">424.421.9924</a> 
+           <a href="#" class="contact">L</a>
        </section>
 
     </main>
 
     <footer>
-        <h4>Made with ❤️️ by Lillie Jirapattanalak</h4></footer>
+        <h4>Made with ❤️️ by Lillie Jirapattanalak</h4>
+    </footer>
 
 
 </body>
