--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
            <h2>Contact</h2>
            <a href="mailto:lilliejira@gmail.com" class="contact">lilliejira@gmail.com</a>
            <a href="tel:424.421.9924" class="contact">424.421.9924</a> 
-           <a href="#" class="contact">L</a>
+           <a href="https://www.linkedin.com/in/lillie-jirapattanalak" class="contact" id="blue">Lillie-Linkedin</a>
        </section>
 
     </main>
