--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Lillie | Web Developer</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <header>
         <h1>Lillie Jirapattanalak</h1>
-        <!-- <img src="./assets/Liilie header.jpg" width="460" height="345" alt="lillie" class="lillie"> -->
         <nav>
             <a href="#aboutme">about me</a>
             <a href="#work">work</a>
@@ -20,6 +23,7 @@
     </header>
 
     <main>
+        <!-- hero = background photo under header -->
         <section class="hero"></section>
         <section id="aboutme" class="aboutme">
             <img src="./assets/lilllie-webdeveloper.JPG" alt="lillie" class="lillie">
@@ -81,6 +85,10 @@
         <h4>Made with ❤️️ by Lillie Jirapattanalak</h4>
     </footer>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 </body>
 </html>
