--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,82 +8,37 @@
     <meta name="Description" content="Enter your description here" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&family=PT+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Lillie | Web Developer</title>
 </head>
 
 <body>
-    <header>
-        <h1>Lillie Jirapattanalak</h1>
-        <nav>
-            <a href="#aboutme">about me</a>
-            <a href="#work">work</a>
-            <a href="#contact">contact</a>
-        </nav>
-    </header>
+    <section id="mainBody">
+        <!-- Navbar -->
+        <header class="container">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffb037;">
+                <h1 class="navbar-brand" href="#">{ Lillie Jirapattanalak }</h1>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link active" href="#">ABOUT <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">PROJECT</a>
+                        <a class="nav-item nav-link" href="#">CONTCACT</a>
+                        <a class="nav-item nav-link" href="#">RESUME</a>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </section>
 
-    <main>
-        <!-- hero = background photo under header -->
-        <section class="hero"></section>
-        <section id="aboutme" class="aboutme">
-            <img src="./assets/lilllie-webdeveloper.JPG" alt="lillie" class="lillie">
-            <h2 id="me">About me</h2>
-            <h2 class="hh">{ Welcome, I am happy that you are here! }</h2>
-            <p class="pp">  My name is Lillie and I am a student at UCLA Extension’s Full Stack Development Program – 3 months full-time
-                 immersive program bootcamp which expect to graduate in July 2021. I am looking for new opportunities to practice 
-                 and develop my skills.</p>
-            <p class="pp">  I have had a passion in web design since I was young, I wrote the online diary and felt like the page’s look was so 
-                 boring, so I tried to find the way how to make its nicer. Therefore, I had a chance to adjust the code on the template. 
-                 At that time, I did not know much about HTML, CSS, etc. But I knew that I was enjoys doing it. Now I am learning and 
-                 eager to learn more.</p>
-            <p class="pp">When I am not studying or working, you can find me at the beach or, at the mountain, or in the kitchen trying out new cooking recipes. </p>
-       </section>
-
-       <section>
-        <div id="work">
-            <h2>Work</h2>
-            <p class="qword">
-                "You can do anything you set your mind to."
-                <br>
-                - Benjamin Frankin
-            </p>
-        </div>
-        <div class="column">
-            <div class="container">
-            <h3>Mini Project</h3>
-            <a href="https://lilliemefie.github.io/miniproject1/">
-            <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="work1" class="work"></a>
-            </div>
-            <div class="container">
-            <h3>Coming Soon...</h3>
-            <a href="#">
-            <img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="work3" class="work"></a>
-            </div>
-            <div class="container">
-            <h3>Coming Soon...</h3>
-            <a href="#">
-            <img src="./assets/save-date-wedding-invitation-card-mockup_53876-76433.jpeg" alt="work4" class="work"></a>
-            </div>
-            <div class="container">
-            <h3>Coming Soon...</h3>
-            <a href="#">
-            <img src="./assets/web-design-concept-with-drawings_1134-77.jpeg" alt="work5" class="work"></a>
-            </div>
-        </div>
-        </section>
-
-       <section id="contact">
-           <h2>Contact</h2>
-           <a href="mailto:lilliejira@gmail.com" class="contact">lilliejira@gmail.com</a>
-           <a href="tel:424.421.9924" class="contact">424.421.9924</a> 
-           <a href="https://www.linkedin.com/in/lillie-jirapattanalak" class="contact" id="blue">Lillie-Linkedin</a>
-       </section>
-
-    </main>
 
     <footer>
-        <h4>Made with ❤️️ by Lillie Jirapattanalak</h4>
+        <h6>Made with ❤️️ by Lillie Jirapattanalak</h6>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -91,4 +47,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 </body>
+
 </html>
