--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section id="mainBody">
         <!-- Navbar -->
         <header class="container">
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffb037;">
-                <h1 class="navbar-brand" href="#">{ Lillie Jirapattanalak }</h1>
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-dark">
+                <h1 class="navbar-brand" href="#">Lillie's Portfolio</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,16 +28,38 @@
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link active" href="#">ABOUT <span class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">PROJECT</a>
-                        <a class="nav-item nav-link" href="#">CONTCACT</a>
+                        <a class="nav-item nav-link" href="#">CONTACT</a>
                         <a class="nav-item nav-link" href="#">RESUME</a>
                     </div>
                 </div>
             </nav>
+
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <div class="row align-items-end">
+                        <div class="col-12 col-md-6">
+                            <img class='img-fluid' src="https://placehold.it/1920x1080" alt="video placeholder" />
+                        </div>
+
+                        <div class="col-12 col-md-6">
+                            <h1>{ Lillie Jirapattanalak }</h1>
+                            <h2></h2>
+                            <button class="btn btn-primary">Learn more.</button>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
         </header>
+        <div id="aboutMe" class="container">
+
+        </div>
     </section>
 
 
-    <footer>
+    <footer class="container">
         <h6>Made with ❤️️ by Lillie Jirapattanalak</h6>
     </footer>
 
