--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <section id="mainBody">
         <!-- Navbar -->
-        <header class="container">
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-dark">
+        <header class="container containerSet">
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #a2a8d3;">
                 <h1 class="navbar-brand" href="#">Lillie's Portfolio</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,40 +26,115 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="#">ABOUT <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">PROJECT</a>
+                        <a class="nav-item nav-link active" href="#aboutMe">ABOUT <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#portfolio">PORTFOLIO</a>
                         <a class="nav-item nav-link" href="#">CONTACT</a>
                         <a class="nav-item nav-link" href="#">RESUME</a>
                     </div>
                 </div>
             </nav>
 
-            <div class="jumbotron jumbotron-fluid">
+            <div class="jumbotron jumbotron-fluid" style="background-color: #e7eaf6;">
                 <div class="container">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-6">
-                            <img class='img-fluid' src="https://placehold.it/1920x1080" alt="video placeholder" />
+                            <img class='img-fluid' src="./assets/lillie-la.JPG" alt="webdeveloper" />
                         </div>
 
-                        <div class="col-12 col-md-6">
-                            <h1>{ Lillie Jirapattanalak }</h1>
-                            <h2></h2>
-                            <button class="btn btn-primary">Learn more.</button>
+                        <div class="col-12 col-md-6 align-items-center">
+                            <h1>Lillie Jirapattanalak</h1>
+                            <p class="lead">['Detail Oriented', 'Active Learning', 'Problem Solving', 'Collaboration ']
+                            </p>
+                            <br>
                         </div>
                     </div>
                 </div>
-
-
             </div>
 
         </header>
-        <div id="aboutMe" class="container">
+        <!-- Container (About me Section) -->
+        <div class="card containerSet" style="background-color:#38598b; color:#e7eaf6 ;" id="aboutMe">
+            <div class="card-body">
+                <h2 class="card-title" style="text-align: center;">{ About Lillie }</h2>
+                <p class="card-text">My name is Lillie and I am a student at UCLA Extension’s Full Stack Development
+                    Program – 3 months full-time
+                    immersive program bootcamp which expect to graduate in July 2021. I am looking for new opportunities
+                    to practice and develop my skills.</p>
+                <p class="card-text">I have had a passion in web design since I was young, I wrote the online diary and
+                    felt like the page’s look was so
+                    boring, so I tried to find the way how to make its nicer. Therefore, I had a chance to adjust the
+                    code on the template.
+                    At that time, I did not know much about HTML, CSS, etc. But I knew that I was enjoys doing it. Now I
+                    am learning and
+                    eager to learn more.</p>
+                <p class="card-text">When I am not studying or working, you can find me at the beach or, at the
+                    mountain, or in the kitchen trying out new cooking recipes.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+            <!-- <img class="card-img-bottom" src="..." alt="Card image cap"> -->
+        </div>
 
+        <br>
+        <br>
+        <!-- Container (Portfolio Section) -->
+        <div class="container-fluid text-center bg-grey containerSet" id="portfolio">
+            <h2>Portfolio</h2><br>
+            <h4>What I have created</h4>
+            <div class="row text-center">
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="./assets/Screen Shot Readme.jpg" alt="Paris" width="350" height="250">
+                        <p><strong>Paris</strong></p>
+                        <p>Yes, we built Paris</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="New York" width="350"
+                            height="250">
+                        <p><strong>New York</strong></p>
+                        <p>We built New York</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
+                            width="350" height="250">
+                        <p><strong>San Francisco</strong></p>
+                        <p>Yes, San Fran is ours</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
+                            width="350" height="250">
+                        <p><strong>San Francisco</strong></p>
+                        <p>Yes, San Fran is ours</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
+                            width="350" height="250">
+                        <p><strong>San Francisco</strong></p>
+                        <p>Yes, San Fran is ours</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
+                            width="350" height="250">
+                        <p><strong>San Francisco</strong></p>
+                        <p>Yes, San Fran is ours</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
 
-    <footer class="container">
+    <footer class="containerSet">
         <h6>Made with ❤️️ by Lillie Jirapattanalak</h6>
     </footer>
 
