edited image to be responsive, theme color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="mainBody">
         <!-- Navbar -->
         <header class="container containerSet">
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #a2a8d3;">
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #bae8e8;">
                 <h1 class="navbar-brand" href="#">Lillie's Portfolio</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="#aboutMe">ABOUT <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link active" href="#aboutMe">ABOUT <span
+                                class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#portfolio">PORTFOLIO</a>
                         <a class="nav-item nav-link" href="#">CONTACT</a>
                         <a class="nav-item nav-link" href="#">RESUME</a>
@@ -34,18 +35,17 @@
                 </div>
             </nav>
 
-            <div class="jumbotron jumbotron-fluid" style="background-color: #e7eaf6;">
+            <div class="jumbotron jumbotron-fluid" style="background-color: #e3f6f5;">
                 <div class="container">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-6">
                             <img class='img-fluid' src="./assets/lillie-la.JPG" alt="webdeveloper" />
                         </div>
-
                         <div class="col-12 col-md-6 align-items-center">
                             <h1>Lillie Jirapattanalak</h1>
                             <p class="lead">['Detail Oriented', 'Active Learning', 'Problem Solving', 'Collaboration ']
                             </p>
-                            <br>
+                            <br><br><br><br><br>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
 
         </header>
         <!-- Container (About me Section) -->
-        <div class="card containerSet" style="background-color:#38598b; color:#e7eaf6 ;" id="aboutMe">
+        <div class="card containerSet row col-sm-6" style="background-color:#e3f6f5;" id="aboutMe">
             <div class="card-body">
                 <h2 class="card-title" style="text-align: center;">{ About Lillie }</h2>
                 <p class="card-text">My name is Lillie and I am a student at UCLA Extension’s Full Stack Development
@@ -76,60 +76,60 @@
 
         <br>
         <br>
-        <!-- Container (Portfolio Section) -->
-        <div class="container-fluid text-center bg-grey containerSet" id="portfolio">
-            <h2>Portfolio</h2><br>
-            <h4>What I have created</h4>
-            <div class="row text-center">
-                <div class="col-sm-4">
-                    <div class="thumbnail">
-                        <img src="./assets/Screen Shot Readme.jpg" alt="Paris" width="350" height="250">
-                        <p><strong>Paris</strong></p>
-                        <p>Yes, we built Paris</p>
-                    </div>
+
+        <div class="container-fluid col-12 col-md-8 text-center">
+            <h2>Portfolio</h2>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <p>Lorem ipsum..</p>
+                    <img class='img-fluid' src="./assets/AskmeWeather resize.png" alt="Image">
                 </div>
-                <div class="col-sm-4">
-                    <div class="thumbnail">
-                        <img src="./assets/man-editing-photos-computer_53876-46864.jpeg" alt="New York" width="350"
-                            height="250">
-                        <p><strong>New York</strong></p>
-                        <p>We built New York</p>
-                    </div>
+                <div class="col-12 col-md-6">
+                    <p>Lorem ipsum..</p>
+                    <img class='img-fluid' src="./assets/FoodSter Project1.jpg" alt="Image">
                 </div>
-                <div class="col-sm-4">
-                    <div class="thumbnail">
-                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
-                            width="350" height="250">
-                        <p><strong>San Francisco</strong></p>
-                        <p>Yes, San Fran is ours</p>
-                    </div>
+                <div class="col-12 col-md-6">  
+                    <p>Lorem ipsum..</p>
+                    <img class='img-fluid' src="./assets/password generator.gif" alt="Image">
                 </div>
-                <div class="col-sm-4">
-                    <div class="thumbnail">
-                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
-                            width="350" height="250">
-                        <p><strong>San Francisco</strong></p>
-                        <p>Yes, San Fran is ours</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="thumbnail">
-                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
-                            width="350" height="250">
-                        <p><strong>San Francisco</strong></p>
-                        <p>Yes, San Fran is ours</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="thumbnail">
-                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
-                            width="350" height="250">
-                        <p><strong>San Francisco</strong></p>
-                        <p>Yes, San Fran is ours</p>
-                    </div>
+                <div class="col-12 col-md-6">
+                    <p>Lorem ipsum..</p>
+                    <img class='img-fluid' src="./assets/web-design-concept-with-drawings_1134-77.jpeg"
+                        alt="Image-fluid">
                 </div>
             </div>
         </div>
+        <!-- <img class="card-img-bottom" src="..." alt="Card image cap"> -->
+        </div>
+        <!-- Container (Portfolio Section) -->
+        <!-- <div class="container-fluid text-center bg-grey containerSet" id="portfolio">
+            <h2>Portfolio</h2><br>
+            <h4>What I have created</h4>
+            <div class="row text-center">
+                <div class="col-md-6">
+                        <img src="./assets/AskmeWeather.png" alt="Paris" width="560" height="354">
+                        <p><strong>Paris</strong></p>
+                        <p>Yes, we built Paris</p> 
+                </div>
+                <div class="col-md-6">
+
+                    <img src="./assets/password generator.gif" alt="New York" width="560" height="354">
+                    <p><strong>New York</strong></p>
+                    <p>We built New York</p>
+                </div>
+                <div class="col-md-6">
+                        <img src="./assets/Foodster Project1.png" alt="San Francisco" width="560" height="354">
+                        <p><strong>San Francisco</strong></p>
+                        <p>Yes, San Fran is ours</p>
+                </div>
+                <div class="col-md-6">
+                        <img src="./assets/creative-design-designer-man-working_53876-98147.jpeg" alt="San Francisco"
+                        width="560" height="354">
+                        <p><strong>San Francisco</strong></p>
+                        <p>Yes, San Fran is ours</p>
+                </div>
+            </div>
+        </div> -->
         </div>
     </section>
 
