--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&family=PT+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Lillie | Web Developer</title>
 </head>
@@ -84,29 +86,29 @@
             <div class="row text-center">
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Lorem ipsum..</p>
+                    <p>Weather Dashboard </p>
                     <a href="https://lilliemefie.github.io/WeatherDashboard/">
                         <img class='img-fluid' src="./assets/AskmeWeather resize.png" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Lorem ipsum..</p>
+                    <p>FoodSter</p>
                     <a href="https://chrischo94.github.io/TinderForFood/">
                         <img class='img-fluid' src="./assets/FoodSter Project1.jpg" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Lorem ipsum..</p>
+                    <p>Password Generator</p>
                     <a href="https://lilliemefie.github.io/password-generator/">
                         <img class='img-fluid' src="./assets/password generator.gif" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Lorem ipsum..</p>
-                    <a href="#">
+                    <p>Coming sooon!</p>
+                    <a href="#portfolio">
                         <img class='img-fluid' src="./assets/web-design-concept-with-drawings_1134-77.jpeg"
                             alt="Image-fluid">
                     </a>
@@ -118,12 +120,27 @@
         <!-- Contact section -->
         <div class="card containerSet row col-sm-6 text-center" style="background-color:#f7f6e7;">
             <div class="card-body">
-                <h2 class="card-title" style="text-align: center;" id="contact">{ Contact }</h2>
-                <p class="card-text">Contact me and I'll get back to you within 24 hours.</p>
-                    <a href="mailto:lilliejira@gmail.com" class="contact">lilliejira@gmail.com</a>
-                    <a href="tel:424.421.9924" class="contact">424.421.9924</a> 
-                    <a href="https://www.linkedin.com/in/lillie-jirapattanalak" class="contact" id="blue">Lillie-Linkedin</a>
+                <h2 class="card-title" style="text-align: center;" id="contact"> Contact </h2>
+                <p><i class="fas fa-map-marker-alt"></i> Los Angeles, US</p>
+                <div class="col-12 text-center">
+                    <a href="mailto:lilliejira@gmail.com" target="_blank" style="color:black">
+                        <i class="fas fa-envelope" id="email" style="font-size:40px"></i>
+                    </a>
+                    <a href="tel:424.421.9924" style="color:black">
+                        <i class="fas fa-phone-square-alt" id="phone" style="font-size:40px" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://github.com/Lilliemefie" target="_blank" style="color:black">
+                        <i class="fab fa-github" id="github" style="font-size:40px"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/lillie-jirapattanalak" target="_blank" style="color:#2867B2">
+                        <i class="fab fa-linkedin" id="linkedin" style="font-size:40px"></i>
+                    </a>
+                    <a href="https://www.instagram.com/lillie_paey/" target="_blank" style="color:white">
+                        <i class="fab fa-instagram" id="instagram" style="font-size:37px"></i>
+                    </a>
+                </div>
             </div>
+            
             <!-- <img class="card-img-bottom" src="..." alt="Card image cap"> -->
         </div>
     </section>
