added link for resume

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#portfolio">PORTFOLIO</a>
                         <a class="nav-item nav-link" href="#contact">CONTACT</a>
-                        <a class="nav-item nav-link" href="#">RESUME</a>
+                        <a class="nav-item nav-link" href="https://drive.google.com/file/d/1AWfbw2MH4dU4QamiFJ2crN93kFrmaL0D/view?usp=sharing">RESUME</a>
                     </div>
                 </div>
             </nav>
